--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <title>DTVs Animationen</title>
 </head>
 <body bgcolor='grey'>
-<button onclick='start_loop()'>starten</button>
+<button id='b_start' onclick='start_loop()'>start</button>
 X:<span id='x'></span> Y: <span id='y'></span> Animation: <span id='animation'></span> facing: <span id='facing'></span> animation frame: <span id='aframe'></span>
 <div id='game_object' style='position: relative'>
 <canvas width='1280px' height='800px' id='background_canvas' style='background: white; position: absolute; top: 0px; left: 0px;'></canvas>
