animations reihenfolge+map+vorbereitung fuer neue animationen

--- a/index.html
+++ b/index.html
@@ -5,9 +5,13 @@
 </head>
 <body bgcolor='grey'>
 <button id='b_start' onclick='start_loop()'>start</button>
-X:<span id='x'></span> Y: <span id='y'></span> Animation: <span id='animation'></span> facing: <span id='facing'></span> animation frame: <span id='aframe'></span>
+X:<span id='x'></span> Y: <span id='y'></span> Animation: <span id='animation'></span> facing: <span id='facing'></span> animation frame: <span id='aframe'></span> <br/>
+mleft<span id='mleft'></span> <br/>
+mup<span id='mup'></span> <br/>
+mright<span id='mright'></span> <br/>
+mdown<span id='mdown'></span> <br/>
 <div id='game_object' style='position: relative'>
-<canvas width='1280px' height='800px' id='background_canvas' style='background: white; position: absolute; top: 0px; left: 0px;'></canvas>
+<canvas width='1280px' height='800px' id='background_canvas' style='position: absolute; top: 0px; left: 0px;'></canvas>
 <canvas width='1280px' height='800px' id='main_canvas' style='position: absolute; top: 0px; left: 0px;' >niiiiiiiiiiiiiiix!</canvas>
 </div>
 <script type="text/javascript" src='game.js'></script>
